src/test/deca/context/valid/provided/ifelse/test_ifelse_lowerEqual.deca
{
    int a=5;
    if(a<=5){
        println("ok");
    }
    else{
        println("Not ok");
    }
}
