src/test/deca/context/invalid/provided/affectationCompatible.deca
{
    int a = 5;
    int b = 6;
    a=b;
    println(a);
}